test-reports/Basic_Component_Tests_20250901_192535.txt
SyntaxError: /Users/peterhanssens/consulting/CloudShuttle/radix-ui/tests/all-components.spec.ts: Unexpected token (558:0)

  556 |   });
  557 | });
> 558 |
      | ^

   at all-components.spec.ts:558

  556 |   });
  557 | });
> 558 |
Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

